fix(storefront):BCTHEME-43 fix overlaping on footer columns when long texts are entered

--- a/assets/scss/layouts/footer/_footer.scss
+++ b/assets/scss/layouts/footer/_footer.scss
@@ -32,7 +32,9 @@
     margin-bottom: spacing("double");
     text-align: center;
     vertical-align: top;
-
+    // TODO: specifically use vendor only for IE11 since overflow-wrap is not supported here 
+    -ms-word-break: break-all;
+    overflow-wrap: break-word;
     @include breakpoint("small") {
         text-align: left;
         width: width("6/12");
